<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HawaiianPizzaToppings">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkPineapple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0" />

        <ImageView
            android:id="@+id/imgPineapple"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_row="0"
            android:layout_column="1"
            app:srcCompat="@drawable/pineapple" />


        <TextView
            android:id="@+id/textViewPineapple"
            android:layout_width="160dp"
            android:layout_height="115dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/pineapple" />

        <CheckBox
            android:id="@+id/checkSauce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0" />

        <ImageView
            android:id="@+id/imgSauce"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_row="1"
            android:layout_column="1"
            android:src="@drawable/sauce"/>

        <TextView
            android:id="@+id/textViewSauce"
            android:layout_width="160dp"
            android:layout_height="115dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/sauce" />

        <CheckBox
            android:id="@+id/checkOnion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0" />

        <ImageView
            android:id="@+id/imgOnion"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_row="2"
            android:layout_column="1"
            app:srcCompat="@drawable/onion" />

        <TextView
            android:id="@+id/textViewOnion"
            android:layout_width="160dp"
            android:layout_height="115dp"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/onion" />

        <CheckBox
            android:id="@+id/checkMozzarella"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0" />

        <ImageView
            android:id="@+id/imgMozzarella"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_row="3"
            android:layout_column="1"
            app:srcCompat="@drawable/mozzarella" />

        <TextView
            android:id="@+id/textViewMozzarella"
            android:layout_width="160dp"
            android:layout_height="115dp"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/mozzarella" />


    </GridLayout>



    <Button
        android:id="@+id/btnGoToDisplayChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Next"
        android:onClick="goToDisplayChoiceA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>