<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChickenCaesarToppings">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkChickenCaesar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0" />

        <ImageView
            android:id="@+id/imgChickenCaesar"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_row="0"
            android:layout_column="1"
            app:srcCompat="@drawable/chicken" />


        <TextView
            android:id="@+id/textViewChicken"
            android:layout_width="160dp"
            android:layout_height="115dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/Chicken_caesar" />

        <CheckBox
            android:id="@+id/checkOlives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0" />

        <ImageView
            android:id="@+id/imgOlives"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_row="1"
            android:layout_column="1"
            app:srcCompat="@drawable/olives" />

        <TextView
            android:id="@+id/textViewOlives"
            android:layout_width="160dp"
            android:layout_height="115dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/Olives" />

        <CheckBox
            android:id="@+id/checkGreenPepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0" />

        <ImageView
            android:id="@+id/imgGreenPepper"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_row="2"
            android:layout_column="1"
            app:srcCompat="@drawable/green_pepper" />

        <TextView
            android:id="@+id/textViewGreenPepper"
            android:layout_width="160dp"
            android:layout_height="115dp"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/green_pepper" />

        <CheckBox
            android:id="@+id/checkMozzarella"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0" />

        <ImageView
            android:id="@+id/imgMozzarella"
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_row="3"
            android:layout_column="1"
            app:srcCompat="@drawable/mozzarella" />

        <TextView
            android:id="@+id/textViewMozzarella"
            android:layout_width="160dp"
            android:layout_height="115dp"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/mozzarella" />


    </GridLayout>



    <Button
        android:id="@+id/btnGoToDisplayChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Next"
        android:onClick="goToDisplayChoiceA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>